# live-protocol

./: .gitignore  .prettierrc  CHANGELOG.md  README.md  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  typings.d.ts  vite.config.ts
.github/workflows/: release.yml
mocks/: Elternrats-Sitzung  01.10.2024.xmind  Elternrats-Sitzung 07.05.2024.xmind  business-plan.docx  business-plan.html  business-plan.json  business-plan.md  business-plan.xmind
patches/: eslint-plugin-simple-import-sort.patch
scripts/: prepare-sidecar.ts  set-version.ts
src/: convert-to-json-in-node.ts  index.css  index.ts  main.ts
src-node/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/icons/: app.icns.ai  app.icns.preset  app.icon.ai  app.icon.icns
src/components/badge/: badge.component.css  badge.component.ts
src/components/button-group/: button-group.component.css  button-group.component.ts
src/components/icon/: icon.component.css  icon.component.ts
src/components/icon-button/: icon-button.component.css  icon-button.component.ts
src/components/numeric-stepper/: numeric-stepper.component.css  numeric-stepper.component.ts
src/components/preview/: preview.component.css  preview.component.ts
src/components/root/: root.component.css  root.component.ts
src/components/select-file/: select-file.component.css  select-file.component.ts
src/components/title-bar/: title-bar.component.css  title-bar.component.ts
src/components/tool-bar/: tool-bar.component.css  tool-bar.component.ts
src/mocks/node/: buffer.ts  fs.promises.ts  http2.ts  module.ts  url.ts  zlib.ts
src/mocks/tauri/: api.event.ts  api.window.ts  plugin-dialog.ts  plugin-fs.ts
src/utils/: conversion.utils.ts  file.utils.spec.ts  file.utils.ts  numeric.utils.ts  xmind.utils.ts
