[package]
name = "live-protocol"
version = "0.5.4"
description = "Generate protocols from mind maps"
authors = ["David Enke<david@enke.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "live_protocol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = { version = "2.4.4", features = ["watch"] }
tauri-plugin-shell = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
